--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     margin-right: 25px;
 }
 
-.expand {
+.gap10 {
     gap: 10px;
 }
 
@@ -99,7 +99,7 @@ body {
     padding-top: 50px;
 }
 
-.dropdown{
+.dropdown {
     position: relative;
     flex-direction: column;
     justify-content: start;
@@ -108,14 +108,24 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    margin: 30px;
-    padding: 20px 30px;
+    margin-top: 20px;
+    padding: 20px 0;
     box-shadow: 0 5px 25px -10px var(--gray);
     border-radius: 20px;
+    background-color: var(--white);
     flex-direction: column;
     align-items: flex-start;
-    gap: 10px;
-    z-index: 10;
+    gap: 0;
+    width: 190px;
+}
+
+.dropdown-content>*{
+    width: 100%;
+    padding: 20px 25px ;
+}
+
+.dropdown-content>*:hover{
+    background-color: rgb(231, 231, 231);
 }
 
 .dropdown:hover .dropdown-content {
